--- a/.github/workflows/leetcode-chart.yml
+++ b/.github/workflows/leetcode-chart.yml
@@ -3,6 +3,8 @@ on:
   schedule:
     - cron: '0 2 * * *'   # Runs every day at 02:00 UTC
   workflow_dispatch:
+permissions:
+  contents: write
 
 jobs:
   build-chart:
